# icub-moveit

./: README.md  batchSummaryROS.txt
icub_controller_interface/: CMakeCache.txt
icub_description/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
icub_description/devel/: .catkin  (+2 more)
icub_moveit/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
icub_moveit/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
icub_moveit/catkin_generated/installspace/: icub_moveit.pc  icub_moveitConfig.cmake
icub_moveit/catkin_generated/stamps/icub_moveit/: package.xml.stamp
icub_moveit/devel/: .rosinstall  _setup_util.py  setup.sh
icub_moveit/devel/lib/icub_moveit/: motion_planning  motion_planning_api_tutorial  move_group_interface
icub_moveit/devel/lib/pkgconfig/: icub_moveit.pc
icub_moveit/devel/share/icub_moveit/cmake/: icub_moveitConfig.cmake
icub_moveit/gtest/: CTestTestfile.cmake  Makefile
icub_moveit/launch/: ICub_moveit_controller_manager.launch  demo.launch  functional.launch  move_group.launch
icub_moveit/src/: motion_planning_api_tutorial.cpp  move_group_interface_tutorial.cpp  object3D.cpp  object3D.h
icub_ros/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
icub_upperbody/: .cproject  .project  .setup_assistant  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
yarp_msgs/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
(+58 files in other folders)
